<resources>
    <string name="app_name">PhotoNext</string>
    <string name="menu_title_next">Next</string>
    <string name="crop">Crop</string>
    <string name="pick_photo">Pick photo</string>
    <string name="edit"></string>
    <string name="rotate">Rotate</string>
    <string name="doublee">Double</string>
    <string name="adjustment">Adjustment</string>
    <string name="autofix">Auto fix</string>
    <string name="ratio_free">Free</string>
    <string name="ratio_original">Original</string>
    <string name="ratio_1x1">1:1</string>
    <string name="ratio_4x3">4:3</string>
    <string name="ratio_16x9">16:9</string>
    <string name="rotate_straighten">Straighten</string>
    <string name="rotate_horizontal">Horizontal</string>
    <string name="rotate_vertical">Vertical</string>
    <string name="rotate_rotate">Rotate</string>
    <string name="adjustment_exposure">Exposure</string>
    <string name="adjustment_temperature">Temperature</string>
    <string name="adjustment_contrast">Contrast</string>
    <string name="adjustment_brightness">Brightness</string>
    <string name="adjustment_vibrance">Vibrance</string>
    <string name="auto_contrast">Auto Contrast</string>
    <string name="blur">Blur</string>
    <string name="smooth">Smooth</string>
    <string name="sharpen">Sharpen</string>
    <string name="splash">Splash</string>
    <string name="blur_circular">Circular</string>
    <string name="blur_linear">Linear</string>
    <string name="double_browse">Browse</string>
    <string name="double_normal">Normal</string>
    <string name="double_darken">Darken</string>
    <string name="double_multiply">Multiply</string>
    <string name="double_lighten">Lighten</string>
    <string name="double_screen">Screen</string>
    <string name="effect_sepia">Sepia</string>
    <string name="effect">Effect</string>
    <string name="overlay">Overlay</string>
    <string name="stylize">Stylize</string>
    <string name="deny_message">If you reject permission,you can not use this service\n\nPlease turn on permissions at [Setting] > [Permission]</string>
    <string name="adjustment_highlights">Highlights</string>
    <string name="adjustment_shadows">Shodows</string>
    <string name="adjustment_saturation">Saturation</string>
    <string name="adjustment_lightness">Saturation</string>
    <string name="adjustment_hue">Hue</string>
    <string name="camera_not_available_message">Camera not available or something went wrong! Please try again later.</string>
    <string name="camera_create_file_failed">Can not create photo, please try again.</string>
    <string name="no_photo_found">No photo found!</string>
</resources>
