<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_crop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="true"
    android:orientation="vertical"
    tools:context="com.noah.photonext.activity.CropActivity">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/edit_background_color"
        android:clipChildren="true">

        <include
            android:id="@+id/include"
            layout="@layout/navigation_bar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout2"
            android:gravity="center">

            <ImageView
                android:id="@+id/rotate_main_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="matrix"
                />
            <TextView
                android:text="0"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:id="@+id/adjustment_seekbar_tv" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_bar_second_height"
            android:layout_above="@+id/include"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:clipChildren="true"
            android:gravity="center"
            android:orientation="horizontal">

            <com.noah.photonext.custom.LLayout
                android:id="@+id/rotate_straighten"
                android:layout_width="@dimen/bottom_bar_second_height"
                android:layout_height="@dimen/bottom_bar_second_height"
                app:icon="@mipmap/ic_tools_rotate_straighten"
                app:text="@string/rotate_straighten" />

            <com.noah.photonext.custom.LLayout
                android:id="@+id/rotate_horizontal"
                android:layout_width="@dimen/bottom_bar_second_height"
                android:layout_height="@dimen/bottom_bar_second_height"
                app:icon="@mipmap/ic_tools_rotate_horizontal"
                app:text="@string/rotate_horizontal" />

            <com.noah.photonext.custom.LLayout
                android:id="@+id/rotate_vertical"
                android:layout_width="@dimen/bottom_bar_second_height"
                android:layout_height="@dimen/bottom_bar_second_height"
                app:icon="@mipmap/ic_tools_rotate_vertical"
                app:text="@string/rotate_vertical" />

            <com.noah.photonext.custom.LLayout
                android:id="@+id/rotate_rotate"
                android:layout_width="@dimen/bottom_bar_second_height"
                android:layout_height="@dimen/bottom_bar_second_height"
                app:icon="@mipmap/ic_tools_rotate_rotate"
                app:text="@string/rotate_rotate" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
