<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_crop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="true"
    android:orientation="vertical"
    tools:context="com.noah.photonext.activity.CropActivity">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/edit_background_color"
        android:clipChildren="true">

        <include
            android:id="@+id/include"
            layout="@layout/navigation_bar" />

        <FrameLayout
            android:id="@+id/blur_root_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout2"
            android:gravity="center">

            <com.imagezoom.ImageViewTouch
                android:id="@+id/edit_main_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter" />

            <com.noah.photonext.custom.EView
                android:id="@+id/edit_draw"
                android:layout_width="1000dp"
                android:layout_height="1000dp"
                android:clickable="true"
                android:visibility="invisible" />

            <FrameLayout
                android:id="@+id/blur_control_background"
                android:layout_width="1000dp"
                android:layout_height="1000dp"
                android:clickable="true">

                <FrameLayout
                    android:id="@+id/blur_control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="200dp">

                    <ImageView
                        android:id="@+id/blur_control_dash1"
                        android:layout_width="wrap_content"
                        android:layout_height="10px"
                        android:src="@mipmap/control3" />

                    <ImageView
                        android:id="@+id/blur_control_line1"
                        android:layout_width="wrap_content"
                        android:layout_height="10px"
                        android:layout_marginTop="60px"
                        android:src="@mipmap/control2" />

                    <ImageView
                        android:id="@+id/blur_control_dot"
                        android:layout_width="40px"
                        android:layout_height="40px"
                        android:layout_gravity="center"
                        android:src="@mipmap/control1" />

                    <ImageView
                        android:id="@+id/blur_control_line2"
                        android:layout_width="wrap_content"
                        android:layout_height="10px"
                        android:layout_marginTop="170px"
                        android:src="@mipmap/control2" />

                    <ImageView
                        android:id="@+id/blur_control_dash2"
                        android:layout_width="wrap_content"
                        android:layout_height="10px"
                        android:layout_marginTop="230px"
                        android:src="@mipmap/control3" />
                </FrameLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/adjustment_seekbar_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:visibility="invisible" />


        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_bar_second_height"
            android:layout_above="@+id/include"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:clipChildren="true"
            android:gravity="center"
            android:orientation="horizontal">

            <com.noah.photonext.custom.LLayout
                android:id="@+id/blur_blur"
                android:layout_width="@dimen/bottom_bar_second_height"
                android:layout_height="@dimen/bottom_bar_second_height"
                app:icon="@mipmap/ic_tools_blur_blur"
                app:text="@string/blur" />

            <com.noah.photonext.custom.LLayout
                android:id="@+id/blur_circular"
                android:layout_width="@dimen/bottom_bar_second_height"
                android:layout_height="@dimen/bottom_bar_second_height"
                app:icon="@mipmap/ic_tools_blur_circular"
                app:text="@string/blur_circular" />

            <com.noah.photonext.custom.LLayout
                android:id="@+id/blur_linear"
                android:layout_width="@dimen/bottom_bar_second_height"
                android:layout_height="@dimen/bottom_bar_second_height"
                app:icon="@mipmap/ic_tools_blur_linear"
                app:text="@string/blur_linear" />

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
